--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,6 +65,8 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:2.2.0'
 
     testImplementation 'junit:junit:4.12'
+    testImplementation "io.mockk:mockk:1.8.13"
+
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
